# corebot-1

./: LICENSE  README.md  corebot.cabal
src/: Corebot.hs  Main.hs
